[package]
name = "shuttle-ch23-danggg"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.28.2"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
