[package]
name = "shuttle-ch23-danggg"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["multipart", "ws"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
axum-test = "16.1.0"
base64 = "0.22.1"
chrono = "0.4.38"
image = "0.25.2"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha256 = "1.5.0"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
tokio = "1.28.2"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = "1.1.3"
unic-emoji-char = "0.9.0"
uuid = "1.10.0"
futures-util = "0.3.29"
tar = "0.4.42"
